New Code Commit

--- a/Yeagerist_EMS_ISP551/pom.xml
+++ b/Yeagerist_EMS_ISP551/pom.xml
@@ -4,6 +4,13 @@
   <artifactId>Yeagerist_EMS_ISP551</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <dependencies>
+  	<dependency>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
+  <version>42.2.1</version>
+</dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
