--- a/Yeagerist_EMS_ISP552/pom.xml
+++ b/Yeagerist_EMS_ISP552/pom.xml
@@ -1,9 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>Yeagerist_EMS_ISP551</groupId>
   <artifactId>Yeagerist_EMS_ISP551</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <properties><java.version>11</java.version></properties>
   <dependencies>
   	<dependency>
   <groupId>org.postgresql</groupId>
