--- a/Yeagerist_EMS_ISP552/pom.xml
+++ b/Yeagerist_EMS_ISP552/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Yeagerist_EMS_ISP551</groupId>
-  <artifactId>Yeagerist_EMS_ISP551</artifactId>
+  <groupId>Yeagerist_EMS_ISP552</groupId>
+  <artifactId>Yeagerist_EMS_ISP552</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <properties><java.version>11</java.version></properties>
@@ -19,6 +19,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
+        <release>17</release>
         </configuration>
       </plugin>
       <plugin>
