--- a/LabISP Yeagerist/pom.xml
+++ b/LabISP Yeagerist/pom.xml
@@ -32,7 +32,7 @@
     <artifactId>maven-war-plugin</artifactId>
     <version>2.4</version>
     <configuration>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
+        <webXml>src\main\webapp\WEB-INF\web.xml</webXml>  
     </configuration>
 </plugin>
       <plugin>
