--- a/Yeagerist_EMS_ISP552/pom.xml
+++ b/Yeagerist_EMS_ISP552/pom.xml
@@ -12,6 +12,18 @@
   <artifactId>postgresql</artifactId>
   <version>42.2.1</version>
 </dependency>
+<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>javax.servlet.jsp-api</artifactId>
+        <version>2.3.1</version>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
