--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,18 @@
   <artifactId>postgresql</artifactId>
   <version>42.2.1</version>
 </dependency>
+<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>javax.servlet.jsp-api</artifactId>
+        <version>2.3.1</version>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -23,7 +35,14 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
       </plugin>
-		
+		<plugin>
+ 	<groupId>org.apache.maven.plugins</groupId>
+ 	<artifactId>maven-war-plugin-web</artifactId>
+ 	<version>2.6</version>
+ 	<configuration>
+ 		<failOnMissingWebXml>false</failOnMissingWebXml>
+ 	</configuration>
+ </plugin>
       <plugin>
         <groupId>com.heroku.sdk</groupId>
         <artifactId>heroku-maven-plugin</artifactId>
