--- a/simplewebapp/pom.xml
+++ b/simplewebapp/pom.xml
@@ -42,6 +42,13 @@
 	<build>
 		<finalName>simplewebapp</finalName>
 		<plugins>
+		<plugin>            
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <configuration>
+    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
+  </configuration>
+</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
