--- a/simplewebapp/pom.xml
+++ b/simplewebapp/pom.xml
@@ -42,12 +42,12 @@
 	<build>
 		<finalName>simplewebapp</finalName>
 		<plugins>
-		<plugin>            
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-war-plugin</artifactId>
-  <configuration>
-    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
-  </configuration>
+		<plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
 </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
